--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "county-xml2js",
-  "version": "1.0.0",
+  "name": "convert-counties-svg2json",
+  "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "usaCounties.json",
   "scripts": {
+    "prepare": "npm start",
     "start": "node index.js"
   },
   "author": "",
-  "license": "MIT",
+  "license": "CC0",
   "dependencies": {
-    "axios": "^0.19.0",
-    "javascript-stringify": "^2.0.1",
-    "xml2js": "^0.4.22"
+    "axios": "^0.19.2",
+    "xml2js": "^0.4.23"
   }
 }
